[metadata]
name = haproxytool
author = Pavlos Parissis
author-email = pavlos.parissis@gmail.com
maintainer = Pavlos Parissis
maintainer-email = pavlos.parissis@gmail.com
summary = A library to work with HAProxy via the stats socket
license = GPLv2
classifier =
    Development Status :: 5 - Production/Stable
        Environment :: Console
        Intended Audience :: Information Technology
        Intended Audience :: System Administrators
        Natural Language :: English
        Operating System :: POSIX
        Programming Language :: Python :: 2.7
        Programming Language :: Python :: 3.4
        Topic :: Utilities
requires-dist =
    docopt
keywords =
    haproxy
    haproxyadmin
[files]
packages =
    haproxytool
[entry_points]
console_scripts =
     haproxytool = haproxytool.cli:main
