[metadata]
name = haproxytool
author = Pavlos Parissis
author-email = pavlos.parissis@gmail.com
maintainer = Pavlos Parissis
maintainer-email = pavlos.parissis@gmail.com
home-page = https://github.com/unixsurfer/haproxytool
summary = A tool to manage HAProxy via stats socket
license = Apache 2.0
classifier =
    Development Status :: 5 - Production/Stable
        Environment :: Console
        Intended Audience :: Information Technology
        Intended Audience :: System Administrators
        Natural Language :: English
        Operating System :: POSIX
        Programming Language :: Python :: 2.7
        Programming Language :: Python :: 3.4
        Programming Language :: Python :: 3.5
        Topic :: Utilities
install_requires =
    docopt
    haproxyadmin>=0.2.2
keywords =
    haproxy
    haproxyadmin
    haproxytool
    tool
[files]
packages =
    haproxytool
[entry_points]
console_scripts =
     haproxytool = haproxytool.cli:main
